plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.acis'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.6.0'
	
    runtimeOnly 'org.postgresql:postgresql'

    implementation "net.minidev:json-smart:1.3.1"

    implementation 'org.glassfish.jersey.core:jersey-server:3.0.2' 
    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.0.2' 
    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.0.2' 
    implementation "org.glassfish.tyrus.bundles:tyrus-standalone-client:1.15"

	implementation "com.neovisionaries:nv-websocket-client:2.9"
    implementation "org.json:json:20190722" 
    implementation "org.apache.commons:commons-dbcp2:2.9.0"
	
    implementation "com.github.pengrad:java-telegram-bot-api:6.9.1"

    implementation "org.kohsuke:github-api:1.306"
    implementation "io.jsonwebtoken:jjwt-impl:0.11.5"
    implementation "io.jsonwebtoken:jjwt-jackson:0.11.5"

    implementation "org.apache.tika:tika-core:2.7.0"

    implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'
	implementation 'javax.websocket:javax.websocket-api:1.1'
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'

	implementation "org.mongodb:bson:4.9.0"

    compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation "junit:junit:4.13.2"

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

bootRun {
    jvmArgs = [
        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
		]
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
    jvmArgs = [
		'--add-opens', 'java.base/java.util=ALL-UNNAMED'
	]
}